@@ -72,11 +72,12 @@ class CircusParser(object):
                           ['merging', 'correct_lag', 'bool', 'False'],
                           ['merging', 'auto_mode', 'float', '0'],
                           ['merging', 'default_lag', 'int', '5'],
-                          ['merging', 'remove_noise', 'bool', 'True'],
+                          ['merging', 'remove_noise', 'bool', 'False'],
                           ['converting', 'export_pcs', 'string', 'prompt'],
                           ['converting', 'erase_all', 'bool', 'True'],
                           ['converting', 'export_all', 'bool', 'False'],
                           ['converting', 'sparse_export', 'bool', 'False'],
+                          ['converting', 'prelabelling', 'bool', 'False'],
                           ['validating', 'nearest_elec', 'string', 'auto'],
                           ['validating', 'max_iter', 'int', '200'],
                           ['validating', 'learning_rate', 'float', '1.0e-3'],
