@@ -3,6 +3,7 @@ Release 0.8.3
 =============
 
 * automatic suppression, during meta merging, of noise templates
+* during the phy export, we can automatically pre-assign labels to neurons
 
 =============
 Release 0.8.2
